change opacity of memberlist overlay, z-index fix

--- a/orbit_source.css
+++ b/orbit_source.css
@@ -3,7 +3,7 @@
 *********************************************************************************************************
 Orbit
 Author       : Sake#0009
-version      : 1.4.2
+version      : 1.4.4
 *********************************************************************************************************
 */
 
@@ -747,7 +747,7 @@ Variables
 */
 :root 
 {
-  --version-content : " 1.4.3";
+  --version-content : " 1.4.4";
   --themeName       : "Orbit";
   --watermark       :  "made by Sake#0009";
 
@@ -845,7 +845,7 @@ folder icons
 }
 .members-1998pB:hover {
     width: 270px;
-    background: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.9) 100%), var(--settingsBackground);
+    background: linear-gradient(to bottom, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.7) 100%), var(--settingsBackground);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -1510,6 +1510,7 @@ new message bar at the top of discord
 {
     background: linear-gradient(to right, var(--mainColor), var(--secondColor))!important;
     margin-right: 80px;
+    z-index: 9999999!important;
 }
     /*Bottom new Message bar*/
     .unread-1xRYoj
